--- a/task-3/index.html
+++ b/task-3/index.html
@@ -93,10 +93,80 @@
         </div>
       </section>
       <section class="contact">
-        <div class="contact-left"></div>
-        <div class="contact-right"></div>
+        <div class="contact-left">
+          <img src="./image/homeicon.png" alt="home" />
+        </div>
+        <div class="contact-right">
+          <h1>Let's stay in touch</h1>
+          <p>
+            Get travel planning ideas, helpful tips, and stories from our
+            visitors delivered right to your inbox
+          </p>
+          <div class="contact-dowload">
+            <h3>Dowload Our App</h3>
+            <img
+              src="./image/download-on-the-app-store-apple-1.png"
+              alt="appstore dowload"
+            />
+
+            <img
+              src="./image/google-play-badge-1.png"
+              alt="google play dowload"
+            />
+          </div>
+          <div class="contact-social">
+            <h3>Follow us</h3>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-instagram-square"></i>
+            <i class="fab fa-pinterest-square"></i>
+          </div>
+          <div class="clear-both"></div>
+        </div>
         <div class="clear-both"></div>
       </section>
     </main>
+    <footer>
+      <div class="info-big">
+        <h3>Hipcamp is everywhere you want to camp</h3>
+        <p>
+          Discover unique experiences on ranches, nature preserves, farms,
+          vineyards, and public campgrounds across the U.S.Book tent camping,
+          treehouses, cabins, yurts, primitive backcountry sites, car camping,
+          airstreams, tiny houses, RV camping , glamping tents and more .
+        </p>
+      </div>
+      <div class="info-small">
+        <h3>Let Us Help You</h3>
+        <ul>
+          <li>About Us</li>
+          <li>Rules & Reservation</li>
+          <li>Policies</li>
+          <li>Accessibility</li>
+          <li>Media Center</li>
+        </ul>
+      </div>
+      <div class="info-small">
+        <h3>Plan With Us</h3>
+        <ul>
+          <li>Find Trip Inspiration</li>
+          <li></li>
+          <li>Build A Trip</li>
+          <li>Buy a Pass</li>
+          <li>Enter A Lottery</li>
+        </ul>
+      </div>
+      <div class="info-small">
+        <h3>Let Us Help You</h3>
+        <li>Your Account</li>
+        <li>Your Reservation</li>
+        <li>Contact Us</li>
+        <li>Help Center</li>
+        <li>Submit Facebook</li>
+      </div>
+      <div class="copy_right">
+        <h4><i class="far fa-copyright"></i> 2020.All rights reserved</h4>
+      </div>
+    </footer>
   </body>
 </html>
