--- a/task-3/index.html
+++ b/task-3/index.html
@@ -150,7 +150,6 @@
         <h3>Plan With Us</h3>
         <ul>
           <li>Find Trip Inspiration</li>
-          <li></li>
           <li>Build A Trip</li>
           <li>Buy a Pass</li>
           <li>Enter A Lottery</li>
@@ -164,7 +163,8 @@
         <li>Help Center</li>
         <li>Submit Facebook</li>
       </div>
-      <div class="copy_right">
+      <div class="clear-both"></div>
+      <div class="copy-right">
         <h4><i class="far fa-copyright"></i> 2020.All rights reserved</h4>
       </div>
     </footer>
