--- a/task-4/index.html
+++ b/task-4/index.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
     <main>
-      <!-- <section class="carousel"></section> -->
+      <section class="carousel"></section>
       <section class="about">
         <div class="about__content">
           <h2>Welcome To Our Campus</h2>
@@ -52,11 +52,28 @@
       </section>
 
       <section class="info">
-        <div class="info__item"></div>
-        <div class="info__item"></div>
-        <div class="info__item"></div>
-        <div class="info__item"></div>
+        <div class="info__item">
+          <h1 class="info__number">60</h1>
+          <p class="info__text">Professional <br> Instructors</h3>
+        </div>
+        <div class="info__item">
+          <h1 class="info__number">80</h1>
+          <p class="info__text">New Courses <br> Every Year</h3>
+        </div>
+        <div class="info__item">
+          <h1 class="info__number">34</h1>
+          <p class="info__text">Live Sessions <br> Every Year</h3>
+        </div>
+        <div class="info__item">
+          <h1 class="info__number">20</h1>
+          <p class="info__text">Registerd <br> Students</h3>
+        </div>
+
+        <div class="clear-both"></div>
       </section>
+      <div class="categories">
+
+      </div>
     </main>
     <footer></footer>
   </body>
