--- a/task-4/index.html
+++ b/task-4/index.html
@@ -42,7 +42,17 @@
           </p>
           <p>
             Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
-            consectetur, adipisci velit
+            consectetur, adipisci velit. Ut lectus nisi, dapibus ac elit ac,
+            vulputate semper orci. Vivamus rhoncus nibh non egestas suscipit. Ut
+            sit amet arcu ut magna laoreet molestie eu eu tortor. Aenean
+            convallis erat pretium augue vulputate, quis accumsan dolor
+            scelerisque. Proin pretium laoreet condimentum. Nulla eget ligula
+            non enim ultrices egestas a sit amet dui. Orci varius natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Suspendisse condimentum augue eget nunc tempus, vel dictum felis
+            bibendum. Aenean ut arcu elementum, tristique elit vulputate,
+            fringilla nunc. Vestibulum ante ipsum primis in faucibus orci luctus
+            et ultrices posuere cubilia curae
           </p>
 
           <button>Read More</button>
@@ -218,6 +228,46 @@
         <div class="clear-both"></div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="contact">
+        <div class="contact__item">
+          <h3>Contact Us</h3>
+          <ul>
+            <li>
+              <i class="fas fa-map-marker-alt"></i>Estate Business, #32821
+              block, #221 DRS Real estate business, UK.
+            </li>
+            <li><i class="fas fa-phone"></i>+(21)-255-999-8888</li>
+            <li><i class="far fa-envelope"></i>corporate-mail@support.com</li>
+          </ul>
+        </div>
+        <div class="contact__item">
+          <h3>Feature Links</h3>
+          <ul>
+            <li>Graduation</li>
+            <li>Admissions</li>
+            <li>Book Store</li>
+            <li>International</li>
+            <li>Courses</li>
+          </ul>
+        </div>
+        <div class="contact__item">
+          <h3>Quick Links</h3>
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+            <li>Blog</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+        <div class="clear-both"></div>
+      </div>
+      <hr />
+      <div class="copyright">
+        &copy; 2020 Mastery. All rights reserved | Designed by
+        <b><i>W3layouts</i></b>
+      </div>
+    </footer>
   </body>
 </html>
