--- a/task-6-Samar/index.html
+++ b/task-6-Samar/index.html
@@ -76,7 +76,7 @@
     </header>
 
     <main>
-      <!-- <section class="carousel">
+      <section class="carousel">
         <div class="carousel__content">
           <h6>We are The Best</h6>
           <h1>
@@ -203,7 +203,7 @@
           <h1>50MI</h1>
           <p>Years Experience</p>
         </div>
-      </section> 
+      </section>
       <section class="story">
         <div class="story__left">
           <div class="story__title">
@@ -251,7 +251,7 @@
           <img src="./images/pic3.png" alt="" />
         </div>
       </section>
-     
+
       <section class="portfolio">
         <div class="portfolio__content">
           <div class="portfolio__title">
@@ -347,7 +347,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
       <section class="blog">
         <div class="blog__title">
           <h6>Our Blog</h6>
@@ -413,7 +413,142 @@
           </div>
         </div>
       </section>
+      <section class="sponsor">
+        <div class="sponsor__image">
+          <img src="./images/logo-pink1.png" alt="sponsor 1" />
+        </div>
+        <div class="sponsor__image">
+          <img src="./images/logo-pink2.png" alt="sponsor 2" />
+        </div>
+        <div class="sponsor__image">
+          <img src="./images/logo-pink3.png" alt="sponsor 3" />
+        </div>
+        <div class="sponsor__image">
+          <img src="./images/logo-pink4.png" alt="sponsor 4" />
+        </div>
+        <div class="sponsor__image">
+          <img src="./images/logo-pink5.png" alt="sponsor 5" />
+        </div>
+        <div class="sponsor__image">
+          <img src="./images/logo-pink6.png" alt="sponsor 6" />
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="footer">
+        <div class="footer__item">
+          <img
+            src="./images/logo-white.png"
+            alt="logo Samar white"
+            style="margin-bottom: 3rem"
+          />
+          <ul>
+            <li>
+              <i class="fa fa-phone icon-primary"></i>
+              <span>1800-123-4567<br />+91 987-654-3210</span>
+            </li>
+            <li>
+              <i class="fa fa-envelope icon-primary"></i>
+              <span>info@example.com <br />services@gmail.com</span>
+            </li>
+            <li>
+              <i class="fas fa-map-marker-alt icon-primary"></i>
+              <span
+                >Demo Address #8901 Marmora <br />
+                Road Chi Minh City, Vietnam</span
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="footer__item">
+          <h5>Our links</h5>
+          <ul>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="index.html">Home</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="about-us-1.html">About Us</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="services-1.html">Services</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="team-1.html">Team</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="blog-grid-2.html">Blog</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__item">
+          <h5>Our Services</h5>
+          <ul>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="javascript:void(0);">Strategy &amp; Research</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="javascript:void(0);">Web Development</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="javascript:void(0);">Web Solution</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="javascript:void(0);">Digital Marketing</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="javascript:void(0);">App Design </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__item">
+          <h5>Other links</h5>
+          <ul>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="faq-1.html">FAQ</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="javascript:void(0);">Portfolio</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="javascript:void(0);">Privacy Policy</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="javascript:void(0);">Terms &amp; Conditions</a>
+            </li>
+            <li>
+              <i class="fas fa-chevron-right icon-secondary"></i
+              ><a href="javascript:void(0);">Support </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <div class="footer__copyright--left">
+          <p>
+            Copyright © 2021 <a href="#">DexignZone</a>. All rights reserved.
+          </p>
+        </div>
+        <div class="footer__copyright--right">
+          <a><i class="fab fa-facebook-f"></i></a>
+          <a><i class="fab fa-instagram"></i></a>
+          <a><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+    </footer>
     <!-- SCRIPT -->
     <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
