showcase section add hover effect

--- a/task-5-Meipaly/index.html
+++ b/task-5-Meipaly/index.html
@@ -142,21 +142,75 @@
       <div class="showcase__content">
         <div class="showcase__item">
           <img src="./image/showcase_img_1.webp" alt="showcase image" />
+          <div class="showcase__overlay">
+            <div class="showcase__icon">
+              <i class="fas fa-search-plus"></i>
+            </div>
+            <div class="showcase__text">
+              <p>LOGO</p>
+              <h3>FLIPPIN BIRD</h3>
+            </div>
+          </div>
         </div>
         <div class="showcase__item">
           <img src="./image/showcase_img_2.webp" alt="showcase image" />
+          <div class="showcase__overlay">
+            <div class="showcase__icon">
+              <i class="fas fa-search-plus"></i>
+            </div>
+            <div class="showcase__text">
+              <p>LOGO</p>
+              <h3>FLIPPIN BIRD</h3>
+            </div>
+          </div>
         </div>
         <div class="showcase__item">
           <img src="./image/showcase_img_3.webp" alt="showcase image" />
+          <div class="showcase__overlay">
+            <div class="showcase__icon">
+              <i class="fas fa-search-plus"></i>
+            </div>
+            <div class="showcase__text">
+              <p>LOGO</p>
+              <h3>FLIPPIN BIRD</h3>
+            </div>
+          </div>
         </div>
         <div class="showcase__item">
           <img src="./image/showcase_img_5.webp" alt="showcase image" />
+          <div class="showcase__overlay">
+            <div class="showcase__icon">
+              <i class="fas fa-search-plus"></i>
+            </div>
+            <div class="showcase__text">
+              <p>LOGO</p>
+              <h3>FLIPPIN BIRD</h3>
+            </div>
+          </div>
         </div>
         <div class="showcase__item">
           <img src="./image/showcase_img_6.webp" alt="showcase image" />
+          <div class="showcase__overlay">
+            <div class="showcase__icon">
+              <i class="fas fa-search-plus"></i>
+            </div>
+            <div class="showcase__text">
+              <p>LOGO</p>
+              <h3>FLIPPIN BIRD</h3>
+            </div>
+          </div>
         </div>
         <div class="showcase__item">
           <img src="./image/showcase_img_7.webp" alt="showcase image" />
+          <div class="showcase__overlay">
+            <div class="showcase__icon">
+              <i class="fas fa-search-plus"></i>
+            </div>
+            <div class="showcase__text">
+              <p>LOGO</p>
+              <h3>FLIPPIN BIRD</h3>
+            </div>
+          </div>
         </div>
       </div>
     </section>
