--- a/task-5-Meipaly/index.html
+++ b/task-5-Meipaly/index.html
@@ -255,6 +255,146 @@
       </div>
     </section>
 
+    <section id="blog">
+      <div class="blog__title">
+        <p class="p-primary">OUR NEWS & ARTICLES</p>
+        <h1>Latest Blog Posts</h1>
+        <p class="p-secondary">
+          We are committed to providing our customers with exceptional service
+          <br />
+          while offering our employees the best training.
+        </p>
+      </div>
+      <div class="blog__content">
+        <div class="blog__item blog__item-1">
+          <img src="./image/grid-metro-1.jpg" alt="image blog 1" />
+        </div>
+        <div class="blog__item blog__item-2">
+          <img src="./image/grid-metro-2.jpg" alt="image blog 2" />
+        </div>
+        <div class="blog__item blog__item-3">
+          <img src="./image/grid-metro-3.jpg" alt="image blog 3" />
+        </div>
+        <div class="blog__item blog__item-4">
+          <img src="./image/grid-metro-4.jpg" alt="image blog 4" />
+        </div>
+        <div class="blog__item blog__item-5">
+          <img src="./image/grid-metro-5.jpg" alt="image blog 5" />
+        </div>
+        <div class="blog__item blog__item-6">
+          <img src="./image/grid-metro-6.jpg" alt="image blog 6" />
+        </div>
+        <div class="blog__item blog__item-7">
+          <img src="./image/grid-metro-7.jpg" alt="image blog 7" />
+        </div>
+        <div class="blog__item blog__item-8">
+          <img src="./image/grid-metro-8.jpg" alt="image blog 8" />
+        </div>
+        <div class="blog__item blog__item-9">
+          <img src="./image/grid-metro-9.jpg" alt="image blog 9" />
+        </div>
+        <div class="blog__item blog__item-10">
+          <img src="./image/grid-metro-10.jpg" alt="image blog 10" />
+        </div>
+      </div>
+    </section>
+
+    <section id="count__number">
+      <div class="count__content">
+        <div class="count__item">
+          <h4 class="counter">8,705</h4>
+          <p>PROJECTS COMPLETED</p>
+        </div>
+        <div class="count__item">
+          <h4 class="counter">480</h4>
+          <p>ACTIVE CLIENTS</p>
+        </div>
+        <div class="count__item">
+          <h4 class="counter">625</h4>
+          <p>CUPS OF COFFEE</p>
+        </div>
+        <div class="count__item">
+          <h4 class="counter">9,774</h4>
+          <p>HAPPY CLIENTS</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="experience">
+      <div class="experience__title"></div>
+      <div class="experience__content">
+        <video controls poster="./image/home_slider.jpg">
+          <source src="./video/video.mp4" />
+        </video>
+        <!-- <iframe
+          width="100%"
+          height="100%"
+          src="https://www.youtube.com/embed/rIXhXaQ8tiM"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe> -->
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="contact__title">
+        <h1>Contact</h1>
+        <p class="p-primary">
+          Thank you for your interest in our website & our services. If you have
+          any <br />questions, please write us a message now!
+        </p>
+      </div>
+      <div class="contact__content">
+        <div class="contact__map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.530887756538!2d106.66729411482959!3d10.770591362246444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752edddb818ebf%3A0xfc8c05045f47a3d8!2zVuG6oW4gSOG6oW5oIE1hbGw!5e0!3m2!1sen!2s!4v1644914996261!5m2!1sen!2s"
+            width="100%"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+        </div>
+        <div class="contact__form">
+          <form>
+            <input type="text" placeholder="Username" />
+            <input type="email" placeholder="Email Address" />
+            <textarea
+              name="text"
+              id="text"
+              placeholder="  Ask a Question ..."
+              cols="30"
+              rows="10"
+            ></textarea>
+            <input type="button" value="Submit" class="contact__button" />
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p>&copy; 2021 UI-CYBERSOFT. ALL RIGHTS RESERVED.</p>
+      <div class="footer__links">
+        <a href="#">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-twitter"></i>
+        </a>
+      </div>
+    </footer>
+    <a href="#" class="anchor__top">
+      <i class="fa fa-angle-up"></i>
+    </a>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
@@ -271,8 +411,25 @@
       type="text/javascript"
       src="./libs/fancybox/dist/jquery.fancybox.js"
     ></script>
-
+    <script src="./libs/countup/jquery.countup.js"></script>
     <script src="./libs/slick/slick/slick.min.js"></script>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"
+      integrity="sha512-ZKNVEa7gi0Dz4Rq9jXcySgcPiK+5f01CqW+ZoKLLKr9VMXuCsw3RjWiv8ZpIOa0hxO79np7Ec8DDWALM0bDOaQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <script>
+      $(document).ready(function () {
+        $('[data-fancybox="gallery"]').fancybox({
+          thumbs: {
+            autoStart: true,
+          },
+        });
+      });
+    </script>
     <script>
       $(document).ready(function () {
         $(".slider__content").slick({
@@ -311,6 +468,12 @@
             // instead of a settings object
           ],
         });
+      });
+    </script>
+    <script>
+      $(".counter").countUp({
+        time: 2000,
+        delay: 10,
       });
     </script>
   </body>
