--- a/task-7-Portfolio/index.html
+++ b/task-7-Portfolio/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>My Portfolio</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="shortcut icon" href="#" />
 
     <link
       rel="stylesheet"
@@ -15,6 +16,12 @@
       integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+    />
+
+    <!-- Animate Css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
     <!-- Bootstrap CSS -->
@@ -28,13 +35,12 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- Header -->
-    <header class="container">
-      <nav class="navbar navbar-expand-md navbar-dark">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <!-- Brand -->
         <a class="navbar-brand logo" href="#">
           <i class="fa fa-dice-d20 fa-2x"></i>
-          <span>CyberPortfolio</span>
+          <span>My Portfolio</span>
         </a>
 
         <!-- Toggler/collapsibe Button -->
@@ -49,15 +55,15 @@
 
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav ml-auto menu">
-            <li class="nav-item active">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Service</a>
+              <a class="nav-link" href="#">Secvice</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -68,7 +74,13 @@
     </header>
 
     <!-- Carousel  -->
-    <div id="demo" class="carousel slide" data-ride="carousel">
+    <div
+      id="demo"
+      class="carousel slide"
+      data-ride="carousel"
+      data-interval="10000"
+      data-pause="false"
+    >
       <!-- Indicators -->
       <ul class="carousel-indicators">
         <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -78,128 +90,56 @@
 
       <!-- The slideshow -->
       <div class="carousel-inner">
+        <div class="overlay"></div>
         <div class="carousel-item active">
           <div class="carousel-caption">
-            <div class="carousel__thumb">
+            <div class="carousel__thumb animate__animated animate__fadeInUp">
               <img src="./images/01-3.jpg" alt="" />
             </div>
-            <h3>Los Angeles</h3>
-            <p>We had such a great time in LA!</p>
+            <h3 class="animate__animated animate__fadeInUp animate__delay-1s">
+              Our goals. Our mission.
+            </h3>
+            <p class="animate__animated animate__fadeInUp animate__delay-2s">
+              How we help other companies to grow.
+            </p>
           </div>
         </div>
         <div class="carousel-item">
           <div class="carousel-caption">
-            <div class="carousel__thumb">
+            <div class="carousel__thumb animate__animated animate__fadeInUp">
               <img src="./images/02-3.jpg" alt="" />
             </div>
-            <h3>Los Angeles</h3>
-            <p>We had such a great time in LA!</p>
+            <h3 class="animate__animated animate__fadeInUp animate__delay-1">
+              Our goals. Our mission.
+            </h3>
+            <p class="animate__animated animate__fadeInUp animate__delay-2s">
+              How we help other companies to grow.
+            </p>
           </div>
         </div>
         <div class="carousel-item">
           <div class="carousel-caption">
-            <div class="carousel__thumb">
+            <div class="carousel__thumb animate__animated animate__fadeInUp">
               <img src="./images/03-3.jpg" alt="" />
             </div>
-            <h3>Los Angeles</h3>
-            <p>We had such a great time in LA!</p>
+            <h3 class="animate__animated animate__fadeInUp animate__delay-1s">
+              Our goals. Our mission.
+            </h3>
+            <p class="animate__animated animate__fadeInUp animate__delay-2s">
+              How we help other companies to grow.
+            </p>
           </div>
         </div>
       </div>
 
       <!-- Left and right controls -->
-      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+      <!-- <a class="carousel-control-prev" href="#demo" data-slide="prev">
         <span class="carousel-control-prev-icon"></span>
       </a>
       <a class="carousel-control-next" href="#demo" data-slide="next">
         <span class="carousel-control-next-icon"></span>
-      </a>
+      </a> -->
     </div>
-
-    <!-- Project -->
-    <section id="project">
-      <div class="project__tile"></div>
-      <div class="project__content container">
-        <!-- Nav pills -->
-        <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a class="nav-link active" data-toggle="pill" href="#allproject"
-              >All project</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="pill" href="#menu1">Menu 1</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="pill" href="#menu2">Menu 2</a>
-          </li>
-        </ul>
-
-        <!-- Tab panes -->
-        <div class="tab-content">
-          <div class="tab-pane container active" id="allproject">
-            <div class="row">
-              <div class="col-md-4">
-                <div class="card">
-                  <img class="card-img-top" src="./images/g1.jpg" alt="" />
-                  <div class="card-body">
-                    <h4 class="card-title">Title</h4>
-                    <p class="card-text">Text</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card">
-                  <img class="card-img-top" src="./images/g2.jpg" alt="" />
-                  <div class="card-body">
-                    <h4 class="card-title">Title</h4>
-                    <p class="card-text">Text</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card">
-                  <img class="card-img-top" src="./images/g3.jpg" alt="" />
-                  <div class="card-body">
-                    <h4 class="card-title">Title</h4>
-                    <p class="card-text">Text</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card">
-                  <img class="card-img-top" src="./images/g3.jpg" alt="" />
-                  <div class="card-body">
-                    <h4 class="card-title">Title</h4>
-                    <p class="card-text">Text</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card">
-                  <img class="card-img-top" src="./images/g3.jpg" alt="" />
-                  <div class="card-body">
-                    <h4 class="card-title">Title</h4>
-                    <p class="card-text">Text</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card">
-                  <img class="card-img-top" src="./images/g3.jpg" alt="" />
-                  <div class="card-body">
-                    <h4 class="card-title">Title</h4>
-                    <p class="card-text">Text</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="tab-pane container fade" id="menu1">Menu1</div>
-          <div class="tab-pane container fade" id="menu2">Menu2</div>
-        </div>
-      </div>
-    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -218,5 +158,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   </body>
 </html>
