--- a/task-8-imroz/index.html
+++ b/task-8-imroz/index.html
@@ -8,8 +8,17 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
     <link rel="shortcut icon" href="#" />
+
+    <!-- Icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- Bootstrap CSS -->
     <link
@@ -18,9 +27,329 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    
+    <header>
+      <nav
+        class="navbar navbar-expand-lg navbar-light d-flex justify-content-between"
+      >
+        <a class="navbar-brand" href="#">
+          <img src="./images/logo.png" width="20" height="20" alt="" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Service</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pages</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+          <div>
+            <a href="" class="header-btn">Buy Now</a>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!-- data-ride="carousel" -->
+
+    <section
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      class="carousel"
+    >
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carouselExampleIndicators"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="d-block w-100"
+            src="./images/bg-image-22.jpg"
+            alt="First slide"
+          />
+          <div class="carousel-content">
+            <h1>UX Reasearch.</h1>
+            <h2>
+              There are many variations of passages of Lorem Ipsum available but
+              the majority have suffered alteration.
+            </h2>
+            <a href="#" class="default-btn">Contact us</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="./images/bg-image-23.jpg"
+            alt="Second slide"
+          />
+          <div class="carousel-content">
+            <h1>UX Reasearch.</h1>
+            <h2>
+              There are many variations of passages of Lorem Ipsum available but
+              the majority have suffered alteration.
+            </h2>
+            <a href="#" class="default-btn">Contact us</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="./images/bg-image-24.jpg"
+            alt="Third slide"
+          />
+          <div class="carousel-content">
+            <h1>UX Reasearch.</h1>
+            <h2>
+              There are many variations of passages of Lorem Ipsum available but
+              the majority have suffered alteration.
+            </h2>
+            <a href="#" class="default-btn">Contact us</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="./images/bg-image-20.jpg"
+            alt="Third slide"
+          />
+          <div class="carousel-content">
+            <h1>UX Reasearch.</h1>
+            <h2>
+              There are many variations of passages of Lorem Ipsum available but
+              the majority have suffered alteration.
+            </h2>
+            <a href="" class="default-btn">Contact us</a>
+          </div>
+        </div>
+      </div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="prev"
+      >
+        <i class="fas fa-long-arrow-alt-left"></i>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="next"
+      >
+        <i class="fas fa-long-arrow-alt-right"></i>
+      </a>
+    </section>
+
+    <section class="service">
+      <p class="subtitle">What we can do for you</p>
+      <h3>Our Awesome Service</h3>
+      <p>
+        There are many variations of passages of Lorem Ipsum available,<br />
+        but the majority have suffered alteration.
+      </p>
+      <div class="service__content">
+        <div class="service__card">
+          <div class="service__image">
+            <div class="icon icon-1">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feather feather-cast"
+              >
+                <path
+                  d="M2 16.1A5 5 0 0 1 5.9 20M2 12.05A9 9 0 0 1 9.95 20M2 8V6a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-6"
+                ></path>
+                <line x1="2" y1="20" x2="2.01" y2="20"></line>
+              </svg>
+            </div>
+          </div>
+          <h4>Business Stratagy</h4>
+          <p>
+            I throw myself down among the tall grass by the stream as I lie
+            close to the earth.
+          </p>
+        </div>
+        <div class="service__card">
+          <div class="service__image">
+            <div class="icon icon-2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feather feather-layers"
+              >
+                <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
+                <polyline points="2 17 12 22 22 17"></polyline>
+                <polyline points="2 12 12 17 22 12"></polyline>
+              </svg>
+            </div>
+          </div>
+          <h4>Business Stratagy</h4>
+          <p>
+            I throw myself down among the tall grass by the stream as I lie
+            close to the earth.
+          </p>
+        </div>
+        <div class="service__card">
+          <div class="service__image">
+            <div class="icon icon-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feather feather-users"
+              >
+                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                <circle cx="9" cy="7" r="4"></circle>
+                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+              </svg>
+            </div>
+          </div>
+          <h4>Business Stratagy</h4>
+          <p>
+            I throw myself down among the tall grass by the stream as I lie
+            close to the earth.
+          </p>
+        </div>
+        <div class="service__card">
+          <div class="service__image">
+            <div class="icon icon-4">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feather feather-monitor"
+              >
+                <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                <line x1="8" y1="21" x2="16" y2="21"></line>
+                <line x1="12" y1="17" x2="12" y2="21"></line>
+              </svg>
+            </div>
+          </div>
+          <h4>Business Stratagy</h4>
+          <p>
+            I throw myself down among the tall grass by the stream as I lie
+            close to the earth.
+          </p>
+        </div>
+        <div class="service__card">
+          <div class="service__image">
+            <div class="icon icon-5">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feather feather-users"
+              >
+                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                <circle cx="9" cy="7" r="4"></circle>
+                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+              </svg>
+            </div>
+          </div>
+          <h4>Business Stratagy</h4>
+          <p>
+            I throw myself down among the tall grass by the stream as I lie
+            close to the earth.
+          </p>
+        </div>
+        <div class="service__card">
+          <div class="service__image">
+            <div class="icon icon-6">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feather feather-monitor"
+              >
+                <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                <line x1="8" y1="21" x2="16" y2="21"></line>
+                <line x1="12" y1="17" x2="12" y2="21"></line>
+              </svg>
+            </div>
+          </div>
+          <h4>Business Stratagy</h4>
+          <p>
+            I throw myself down among the tall grass by the stream as I lie
+            close to the earth.
+          </p>
+        </div>
+      </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
