--- a/task-8-imroz/index.html
+++ b/task-8-imroz/index.html
@@ -351,6 +351,108 @@
       </div>
     </section>
 
+    <section class="project">
+      <p class="subtitle">Our complete project</p>
+      <h3>Our Project</h3>
+      <p>
+        There are many variations of passages of Lorem Ipsum available, <br />
+        but the majority have suffered alteration.
+      </p>
+
+      <div class="project__content">
+        <div class="project__card card">
+          <div class="card__thumbnail">
+            <img src="./images/portfolio-4.jpg" alt="portfolio 1" />
+          </div>
+          <div class="card__content">
+            <p>Development</p>
+            <h4>Web Design</h4>
+          </div>
+          <div class="card__content-slideUp">
+            <p>
+              Lorem ipsum dolor sit amet <br />
+              consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <div class="project__card card">
+          <div class="card__thumbnail">
+            <img src="./images/portfolio-5.jpg" alt="portfolio 2" />
+          </div>
+          <div class="card__content">
+            <p>Product Design</p>
+            <h4>App Development</h4>
+          </div>
+          <div class="card__content-slideUp">
+            <p>
+              Lorem ipsum dolor sit amet <br />
+              consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <div class="project__card card">
+          <div class="card__thumbnail">
+            <img src="./images/portfolio-6.jpg" alt="portfolio 3" />
+          </div>
+          <div class="card__content">
+            <p>Application</p>
+            <h4>Photoshop Design</h4>
+          </div>
+          <div class="card__content-slideUp">
+            <p>
+              Lorem ipsum dolor sit amet <br />
+              consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <div class="project__card card">
+          <div class="card__thumbnail">
+            <img src="./images/portfolio-7.jpg" alt="portfolio 4" />
+          </div>
+          <div class="card__content">
+            <p>Web Design</p>
+            <h4>Web Design</h4>
+          </div>
+          <div class="card__content-slideUp">
+            <p>
+              Lorem ipsum dolor sit amet <br />
+              consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <div class="project__card card">
+          <div class="card__thumbnail">
+            <img src="./images/portfolio-8.jpg" alt="portfolio 5" />
+          </div>
+          <div class="card__content">
+            <p>Application</p>
+            <h4>Web Application</h4>
+          </div>
+          <div class="card__content-slideUp">
+            <p>
+              Lorem ipsum dolor sit amet <br />
+              consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <div class="project__card card">
+          <div class="card__thumbnail">
+            <img src="./images/portfolio-9.jpg" alt="portfolio 6" />
+          </div>
+          <div class="card__content">
+            <p>Photoshop</p>
+            <h4>Photo Editing</h4>
+          </div>
+          <div class="card__content-slideUp">
+            <p>
+              Lorem ipsum dolor sit amet <br />
+              consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
