--- a/task-8-imroz/index.html
+++ b/task-8-imroz/index.html
@@ -175,7 +175,7 @@
       </a>
     </section>
 
-    <section class="service">
+    <section class="service container">
       <p class="subtitle">What we can do for you</p>
       <h3>Our Awesome Service</h3>
       <p>
@@ -448,6 +448,117 @@
               Lorem ipsum dolor sit amet <br />
               consectetur adipisicing elit.
             </p>
+          </div>
+        </div>
+      </div>
+      <a href="#" class="default-btn">View Projects</a>
+    </section>
+
+    <section class="about container-fluid">
+      <div class="row">
+        <div class="about__image col-lg-5">
+          <img src="./images/about-3.jpg" alt="about image" />
+        </div>
+        <div class="about__content col-lg-7">
+          <p class="subtitle">Our complete project</p>
+          <h3>Our Project</h3>
+          <p class="description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which dont look even slightly
+            believable. If you are going to use a passage of Lorem Ipsum,
+          </p>
+
+          <div class="about__nav">
+            <!-- Nav pills -->
+            <ul class="nav nav-pills">
+              <li class="nav-item">
+                <a class="nav-link active" data-toggle="pill" href="#home"
+                  >Our History</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-toggle="pill" href="#menu1"
+                  >Our Mission</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-toggle="pill" href="#menu2"
+                  >Our Vision</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-toggle="pill" href="#menu2">Contact</a>
+              </li>
+            </ul>
+
+            <!-- Tab panes -->
+            <div class="tab-content">
+              <div class="tab-pane container active" id="home">
+                <h4>Lorem ipsum dolor sit.</h4>
+                <p class="description">
+                  <span><i class="fa-solid fa-check"></i></span>&emsp;The
+                  Philosophy Of business analytics
+                </p>
+                <p class="description">
+                  <span><i class="fa-solid fa-check"></i></span>&emsp;Fast-Track
+                  Your business
+                </p>
+                <p class="description">
+                  <span><i class="fa-solid fa-check"></i></span>&emsp;Lies And
+                  Damn Lies About business
+                </p>
+                <p class="description">
+                  <span><i class="fa-solid fa-check"></i></span>&emsp;The
+                  Ultimate Deal On business
+                </p>
+              </div>
+              <div class="tab-pane container fade" id="menu1">
+                <p class="description">
+                  Fatima ipsum dolor sit amet consectetur adipisicing elit.
+                  Neque ab aliquid, atque enim, vero nobis quam beatae nesciunt
+                  aliquam molestias, optio hic laborum esse. Deserunt architecto
+                  officiis laudantium corporis voluptatem.
+                </p>
+                <br>
+                <p class="description">
+                  Jannin ipsum dolor sit amet consectetur adipisicing elit.
+                  Neque ab aliquid, atque enim, vero nobis quam beatae nesciunt
+                  aliquam molestias, optio hic laborum esse. Deserunt architecto
+                  officiis laudantium corporis voluptatem.
+                </p>
+              </div>
+              <div class="tab-pane container fade" id="menu2">
+                <p class="description">
+                  Fatima ipsum dolor sit amet consectetur adipisicing elit.
+                  Neque ab aliquid, atque enim, vero nobis quam beatae nesciunt
+                  aliquam molestias, optio hic laborum esse. Deserunt architecto
+                  officiis laudantium corporis voluptatem.
+                </p>
+                <br>
+                <p class="description">
+                  Jannin ipsum dolor sit amet consectetur adipisicing elit.
+                  Neque ab aliquid, atque enim, vero nobis quam beatae nesciunt
+                  aliquam molestias, optio hic laborum esse. Deserunt architecto
+                  officiis laudantium corporis voluptatem.
+                </p>
+              </div>
+              <div class="tab-pane container fade" id="menu2">
+                <p class="description">
+                  Fatima ipsum dolor sit amet consectetur adipisicing elit.
+                  Neque ab aliquid, atque enim, vero nobis quam beatae nesciunt
+                  aliquam molestias, optio hic laborum esse. Deserunt architecto
+                  officiis laudantium corporis voluptatem.
+                </p>
+                <br>
+                <p class="description">
+                  Jannin ipsum dolor sit amet consectetur adipisicing elit.
+                  Neque ab aliquid, atque enim, vero nobis quam beatae nesciunt
+                  aliquam molestias, optio hic laborum esse. Deserunt architecto
+                  officiis laudantium corporis voluptatem.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
