news section completed

--- a/task-8-imroz/index.html
+++ b/task-8-imroz/index.html
@@ -84,6 +84,7 @@
       id="carouselExampleIndicators"
       class="carousel slide"
       class="carousel"
+      style="padding: 0"
     >
       <ol class="carousel-indicators">
         <li
@@ -697,6 +698,63 @@
       </div>
     </section>
 
+    <section class="new">
+      <p class="subtitle">Latest Post</p>
+      <h3>Latest News</h3>
+      <p>
+        There are many variations of passages of Lorem Ipsum available,<br />
+        but the majority have suffered alteration.
+      </p>
+
+      <div class="new__content">
+        <div class="new__card card">
+          <div class="card__thumbnail">
+            <img src="./images/blog-01.jpg" alt="portfolio 1" />
+          </div>
+          <div class="card__content">
+            <p>App Development</p>
+            <h4>What is the Difference between Web and Brand.</h4>
+          </div>
+          <div class="card__content-slideUp">
+            <button class="default-btn">Read More</button>
+          </div>
+        </div>
+        <div class="new__card card">
+          <div class="card__thumbnail">
+            <img src="./images/blog-02.jpg" alt="portfolio 1" />
+          </div>
+          <div class="card__content">
+            <p>React App</p>
+            <h4>A big ticket gone to be an interesting look New York.</h4>
+          </div>
+          <div class="card__content-slideUp">
+            <button class="default-btn">Read More</button>
+          </div>
+        </div>
+        <div class="new__card card">
+          <div class="card__thumbnail">
+            <img src="./images/blog-03.jpg" alt="portfolio 1" />
+          </div>
+          <div class="card__content">
+            <p>Photoshop</p>
+            <h4>Getting tickets to the big show have a closer look.</h4>
+          </div>
+          <div class="card__content-slideUp">
+            <button class="header-btn">Read More</button>
+          </div>
+        </div>
+      </div>
+      <button class="default-btn">View More</button>
+    </section>
+
+    <section class="client">
+      <p class="subtitle">Our Clients</p>
+      <h3>Our Clients</h3>
+      <p>
+        There are many variations of passages of Lorem Ipsum available,<br />
+        but the majority have suffered alteration.
+      </p>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
