client section complete

--- a/task-8-imroz/index.html
+++ b/task-8-imroz/index.html
@@ -754,6 +754,29 @@
         There are many variations of passages of Lorem Ipsum available,<br />
         but the majority have suffered alteration.
       </p>
+
+      <div class="client__content container-fluid">
+        <div class="row">
+          <div class="col-4 client__item no-right-border no-bottom-border">
+            <img src="./images/brand-01.png" alt="brand1" />
+          </div>
+          <div class="col-4 client__item no-right-border no-bottom-border">
+            <img src="./images/brand-02.png" alt="brand2" />
+          </div>
+          <div class="col-4 client__item">
+            <img src="./images/brand-03.png" alt="brand3" />
+          </div>
+          <div class="col-4 client__item no-right-border">
+            <img src="./images/brand-04.png" alt="brand4" />
+          </div>
+          <div class="col-4 client__item no-right-border">
+            <img src="./images/brand-05.png" alt="brand5" />
+          </div>
+          <div class="col-4 client__item">
+            <img src="./images/brand-06.png" alt="brand6" />
+          </div>
+        </div>
+      </div>
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
